final touch fix gaps

--- a/style.css
+++ b/style.css
@@ -707,9 +707,9 @@ main section.view9 .footer .sec3 .bottom a i {
     padding: 1rem;
   }
   main section.view9 .footer {
-    grid-template-columns: 15vw 1fr;
-    grid-template-rows: 1fr 10vw;
-    gap: 2rem;
+    grid-template-columns: 15rem 1fr;
+    grid-template-rows: 1fr 5rem;
+    gap: 1rem;
     grid-template-areas: "sec1 sec2" "sec1 sec3";
   }
   main section.view9 .footer .sec1 {
